Sun Aug 24 11:44:11 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_rational.rb: remove commented-out code.

Sun Aug 24 11:09:29 2014  Eric Wong  <e@80x24.org>

	* lib/benchmark.rb (measure): reduce allocations as in r47260

Sun Aug 24 10:35:54 2014  Pete Higgins  <pete@peterhiggins.org>

	* lib/benchmark.rb (module Benchmark): define BENCHMARK_CLOCK
	  (realtime): use Process.clock_gettime(BENCHMARK_CLOCK)
	  Reduces allocations to improve performance [Feature #10165]

	* test/benchmark/test_benchmark.rb (test_realtime_output): new test

Fri Aug 22 20:23:54 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c (rb_fstring): fix condition (easy to cause infinite loop!).

Fri Aug 22 20:07:43 2014  Koichi Sasada  <ko1@atdot.net>

	* string.c (rb_fstring, fstr_update_callback): simply delete garbage
	  key first.

	  Garbage keys can be swept by lazy sweeping invoked by creating new
	  fstring.  So that simply do:
	  (1) delete garbage key and return `fstr_update_callback' immediately
	  (2) try again `fstr_update_callback()' to create a new fstr.

	  This bug can be cause memory corruption, reported by
	  http://u64.rubyci.org/~chkbuild/ruby-trunk/log/20140821T220302Z.fail.html.gz

Fri Aug 22 19:30:39 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_complex.rb: removed commented-out code.

Fri Aug 22 19:25:28 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_complex.rb: fixed broken tests. Math is not
	  compatible CMath now.

Fri Aug 22 15:36:09 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (Doxyfile): revert r43888, not to require preinstalled
	  ruby.  [ruby-core:64488] [Bug #10161]

Fri Aug 22 12:32:15 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/shell.rb: removed commented-out code.
	* lib/shell/builtin-command.rb: ditto.
	* lib/shell/command-processor.rb: ditto.

Fri Aug 22 12:21:46 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
