@@ -1,3 +1,7 @@
+Sun Aug 24 11:47:39 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
+
+	* test/ruby/test_rational.rb: fixed indent.
+
 Sun Aug 24 11:44:11 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* test/ruby/test_rational.rb: remove commented-out code.
